--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@react-spring/web": "^9.7.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "keep-react": "^1.3.0",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "tailwindcss": "^3.4.3",
     "wouter": "^3.1.3"
   },
