vercel config & struggling with cards

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
     "rewrites": [
       {"source": "/(.*)", "destination": "/"}
+    ],
+    "builds":[
+      {
+        "source":"/public/logoMate.png",
+        "use":"@vercel/static"
+      }
+    ],
+    "files":[
+      "public/logoMate.png"
     ]
   }
   
